--- a/src/styles/_navigation.styl
+++ b/src/styles/_navigation.styl
@@ -30,8 +30,11 @@
   .navigation-item
     float: left
     margin-bottom: 0
-    margin-left: 2.5rem
+    margin-left: 2.0rem
     position: relative
+    
+    +above(64rem)
+      margin-left: 2.5rem   
     
   .img
     height: 2rem
