Fix logo responsiveness issues

--- a/src/styles/_header.styl
+++ b/src/styles/_header.styl
@@ -35,3 +35,20 @@
     +above(40rem)
       margin-bottom: 4rem
       margin-top: 2rem
+      
+  #logo
+    
+    height: 5rem
+    margin-bottom: 4rem
+
+    +tablet()
+      height: 10rem
+      margin-bottom: 5rem
+      
+    +desktop()
+      height: 15rem
+      margin-bottom: 6rem
+      
+    +hd()
+      height: 20rem
+      margin-bottom: 7rem
